finish getCalories logic